[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameTester.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[node name="GameTester" type="Node2D"]
script = ExtResource( 1 )

[node name="Create" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 30.0
text = "create game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddMJS" type="Button" parent="."]
margin_left = 10.0
margin_top = 40.0
margin_right = 80.0
margin_bottom = 60.0
text = "add mjs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddLLXU" type="Button" parent="."]
margin_left = 90.0
margin_top = 40.0
margin_right = 160.0
margin_bottom = 60.0
text = "add llxu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddNPS" type="Button" parent="."]
margin_left = 170.0
margin_top = 40.0
margin_right = 240.0
margin_bottom = 60.0
text = "add nps"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 10.0
margin_top = 70.0
margin_right = 100.0
margin_bottom = 90.0
text = "start game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trump" type="Label" parent="."]
margin_left = 10.0
margin_top = 100.0
margin_right = 80.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "null"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="Label" parent="."]
margin_left = 90.0
margin_top = 100.0
margin_right = 390.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "[hand]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rounds" type="Label" parent="."]
margin_left = 250.0
margin_top = 70.0
margin_right = 390.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "[rounds]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="Label" parent="."]
margin_left = 110.0
margin_top = 70.0
margin_right = 240.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "[rounds]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1" type="Node2D" parent="."]

[node name="Name" type="Label" parent="P1"]
margin_left = 10.0
margin_top = 130.0
margin_right = 80.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "PLAYER 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tricks" type="Label" parent="P1"]
margin_left = 90.0
margin_top = 130.0
margin_right = 120.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "null"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid" type="Label" parent="P1"]
margin_left = 130.0
margin_top = 130.0
margin_right = 160.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "null"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards" type="Label" parent="P1"]
margin_left = 170.0
margin_top = 130.0
margin_right = 390.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "[cards]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deal" type="Button" parent="P1"]
margin_left = 10.0
margin_top = 160.0
margin_right = 50.0
margin_bottom = 180.0
text = "deal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid0" type="Button" parent="P1"]
margin_left = 60.0
margin_top = 160.0
margin_right = 110.0
margin_bottom = 180.0
text = "bid 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid1" type="Button" parent="P1"]
margin_left = 120.0
margin_top = 160.0
margin_right = 170.0
margin_bottom = 180.0
text = "bid 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid2" type="Button" parent="P1"]
margin_left = 180.0
margin_top = 160.0
margin_right = 230.0
margin_bottom = 180.0
text = "bid 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid3" type="Button" parent="P1"]
margin_left = 240.0
margin_top = 160.0
margin_right = 290.0
margin_bottom = 180.0
text = "bid 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card1" type="Button" parent="P1"]
margin_left = 10.0
margin_top = 190.0
margin_right = 100.0
margin_bottom = 210.0
text = "play card 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card2" type="Button" parent="P1"]
margin_left = 110.0
margin_top = 190.0
margin_right = 200.0
margin_bottom = 210.0
text = "play card 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card3" type="Button" parent="P1"]
margin_left = 210.0
margin_top = 190.0
margin_right = 300.0
margin_bottom = 210.0
text = "play card 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="P1"]
margin_left = 310.0
margin_top = 160.0
margin_right = 390.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2" type="Node2D" parent="."]
position = Vector2( 0, 90 )

[node name="Name" type="Label" parent="P2"]
margin_left = 10.0
margin_top = 130.0
margin_right = 80.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "PLAYER 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tricks" type="Label" parent="P2"]
margin_left = 90.0
margin_top = 130.0
margin_right = 120.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "null"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid" type="Label" parent="P2"]
margin_left = 130.0
margin_top = 130.0
margin_right = 160.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "null"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards" type="Label" parent="P2"]
margin_left = 170.0
margin_top = 130.0
margin_right = 390.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "[cards]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deal" type="Button" parent="P2"]
margin_left = 10.0
margin_top = 160.0
margin_right = 50.0
margin_bottom = 180.0
text = "deal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid0" type="Button" parent="P2"]
margin_left = 60.0
margin_top = 160.0
margin_right = 110.0
margin_bottom = 180.0
text = "bid 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid1" type="Button" parent="P2"]
margin_left = 120.0
margin_top = 160.0
margin_right = 170.0
margin_bottom = 180.0
text = "bid 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid2" type="Button" parent="P2"]
margin_left = 180.0
margin_top = 160.0
margin_right = 230.0
margin_bottom = 180.0
text = "bid 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid3" type="Button" parent="P2"]
margin_left = 240.0
margin_top = 160.0
margin_right = 290.0
margin_bottom = 180.0
text = "bid 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card1" type="Button" parent="P2"]
margin_left = 10.0
margin_top = 190.0
margin_right = 100.0
margin_bottom = 210.0
text = "play card 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card2" type="Button" parent="P2"]
margin_left = 110.0
margin_top = 190.0
margin_right = 200.0
margin_bottom = 210.0
text = "play card 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card3" type="Button" parent="P2"]
margin_left = 210.0
margin_top = 190.0
margin_right = 300.0
margin_bottom = 210.0
text = "play card 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="P2"]
margin_left = 310.0
margin_top = 160.0
margin_right = 390.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P3" type="Node2D" parent="."]
position = Vector2( 0, 180 )

[node name="Name" type="Label" parent="P3"]
margin_left = 10.0
margin_top = 130.0
margin_right = 80.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "PLAYER 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tricks" type="Label" parent="P3"]
margin_left = 90.0
margin_top = 130.0
margin_right = 120.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "null"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid" type="Label" parent="P3"]
margin_left = 130.0
margin_top = 130.0
margin_right = 160.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "null"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards" type="Label" parent="P3"]
margin_left = 170.0
margin_top = 130.0
margin_right = 390.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "[cards]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deal" type="Button" parent="P3"]
margin_left = 10.0
margin_top = 160.0
margin_right = 50.0
margin_bottom = 180.0
text = "deal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid0" type="Button" parent="P3"]
margin_left = 60.0
margin_top = 160.0
margin_right = 110.0
margin_bottom = 180.0
text = "bid 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid1" type="Button" parent="P3"]
margin_left = 120.0
margin_top = 160.0
margin_right = 170.0
margin_bottom = 180.0
text = "bid 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid2" type="Button" parent="P3"]
margin_left = 180.0
margin_top = 160.0
margin_right = 230.0
margin_bottom = 180.0
text = "bid 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bid3" type="Button" parent="P3"]
margin_left = 240.0
margin_top = 160.0
margin_right = 290.0
margin_bottom = 180.0
text = "bid 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card1" type="Button" parent="P3"]
margin_left = 10.0
margin_top = 190.0
margin_right = 100.0
margin_bottom = 210.0
text = "play card 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card2" type="Button" parent="P3"]
margin_left = 110.0
margin_top = 190.0
margin_right = 200.0
margin_bottom = 210.0
text = "play card 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card3" type="Button" parent="P3"]
margin_left = 210.0
margin_top = 190.0
margin_right = 300.0
margin_bottom = 210.0
text = "play card 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="P3"]
margin_left = 310.0
margin_top = 160.0
margin_right = 390.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 80, 10 )
custom_styles/normal = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Label" parent="."]
margin_left = 10.0
margin_top = 400.0
margin_right = 390.0
margin_bottom = 590.0
custom_styles/normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="AddMJS" to="." method="_on_AddMJS_pressed"]
[connection signal="pressed" from="AddLLXU" to="." method="_on_AddLLXU_pressed"]
[connection signal="pressed" from="AddNPS" to="." method="_on_AddNPS_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
